add enum Visibility and add path in DefaultPathIcon